Updates for saints and saints works. #383

--- a/srophe-app/templates/geo.html
+++ b/srophe-app/templates/geo.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr">
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -56,11 +56,7 @@
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/authors/index.html" class="authors-sm-icon nav-icons">Authors</a>
-                                </li>
-                                <li role="presentation" class="divider"/>
-                                <li>
-                                    <a href="/saints/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                                    <a href="/q/index.html" class="saints-sm-icon nav-icons">Saints</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
