--- a/srophe-app/templates/q.html
+++ b/srophe-app/templates/q.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title data-template="config:app-title" coll-title="Syriaca.org: Qadishē: Guide to the Syriac Saints Lives">Syriaca.org: Qadishē: Guide to the Syriac Saints Lives</title>
+        <title data-template="config:app-title" coll-title="Gateway to the Syriac Saints">Gateway to the Syriac Saints</title>
         <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
         <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
         <!--<meta name="DC.subject" property="dc.subject" content="Geography, Ancient"/>-->
@@ -40,7 +40,7 @@
                         <span class="icon-bar"/>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img alt="Syriac.org: Persons" src="/exist/apps/srophe/resources/img/icons-saints.png"/>
+                        <img alt="Syriac.org: Persons" src="/exist/apps/srophe/resources/img/icons-q.png"/>
                     </a>
                 </div>
                 <div class="navbar-collapse collapse pull-right">
@@ -59,11 +59,7 @@
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="../authors/index.html" class="authors-sm-icon nav-icons">Authors</a>
-                                </li>
-                                <li role="presentation" class="divider"/>
-                                <li>
-                                    <a href="../saints/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                                    <a href="../q/index.html" class="saints-sm-icon nav-icons">Saints</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
@@ -84,11 +80,14 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="/exist/apps/srophe/hsl/browse.html">index</a>
+                            <a href="../saints/index.html">persons</a>
+                        </li>
+                        <li>
+                            <a href="../bhse/index.html">works</a>
                         </li>
                     </ul>
                     <!--
-                    <form class="navbar-form navbar-right navbar-input-group" role="search" action="/saints/search.html" method="get">
+                    <form class="navbar-form navbar-right navbar-input-group" role="search" action="search.html" method="get">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search" name="q" id="q"/>
                             <input type="hidden" id="collection" value="saints"/>
