--- a/srophe-app/templates/saints.html
+++ b/srophe-app/templates/saints.html
@@ -59,11 +59,7 @@
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="../authors/index.html" class="authors-sm-icon nav-icons">Authors</a>
-                                </li>
-                                <li role="presentation" class="divider"/>
-                                <li>
-                                    <a href="../saints/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                                    <a href="../q/index.html" class="saints-sm-icon nav-icons">Saints</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
