--- a/srophe-app/templates/syrpage.html
+++ b/srophe-app/templates/syrpage.html
@@ -42,13 +42,38 @@
                             <a href="geo/index.html" class="geo-sm-icon nav-icons">Gazetteer</a>
                         </li>
                         <li>
-                            <a href="persons/index.html" class="persons-sm-icon nav-icons">SBD</a>
+                            <a href="#" class="persons-sm-icon nav-icons dropdown-toggle" data-toggle="dropdown">SBD <b class="caret"/>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="persons/index.html" class="persons-sm-icon nav-icons">SBD</a>
+                                </li>
+                                <li role="presentation" class="divider"/>
+                                <li>
+                                    <a href="authors/index.html" class="authors-sm-icon nav-icons">Authors</a>
+                                </li>
+                                <li role="presentation" class="divider"/>
+                                <li>
+                                    <a href="saints/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <a href="authors/index.html" class="authors-sm-icon nav-icons">Authors</a>
-                        </li>
-                        <li>
-                            <a href="saints/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                            <a href="#" class="saints-sm-icon nav-icons dropdown-toggle" data-toggle="dropdown">Saints <b class="caret"/>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="q/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                                </li>
+                                <li role="presentation" class="divider"/>
+                                <li>
+                                    <a href="saints/index.html" class="saints-sm-icon nav-icons">Persons</a>
+                                </li>
+                                <li role="presentation" class="divider"/>
+                                <li>
+                                    <a href="bhse/index.html" class="bhse-sm-icon nav-icons">Works</a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <a href="spear/index.html" class="spear-sm-icon nav-icons">SPEAR</a>
@@ -57,6 +82,7 @@
                             <a href="mss/index.html" class="mss-sm-icon nav-icons">MSS</a>
                         </li>
                         <li>
+                            <a href="documentation/index.html">Documentation</a>
                         </li>
                     </ul>
                     <!-- Enable cross module searching -->
