--- a/srophe-app/templates/authors.html
+++ b/srophe-app/templates/authors.html
@@ -58,11 +58,7 @@
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="../authors/index.html" class="authors-sm-icon nav-icons">Authors</a>
-                                </li>
-                                <li role="presentation" class="divider"/>
-                                <li>
-                                    <a href="../saints/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                                    <a href="../q/index.html" class="saints-sm-icon nav-icons">Saints</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
@@ -89,7 +85,7 @@
                     <form class="navbar-form navbar-right navbar-input-group" role="search" action="search.html" method="get">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search" name="q" id="q"/>
-                            <input type="hidden" id="collection" value="authors"/>
+                            <input type="hidden" id="collection" value="persons"/>
                             <div class="input-group-btn">
                                 <button class="btn btn-default" type="submit">
                                     <span class="glyphicon glyphicon-search"/>
