--- a/srophe-app/templates/bhse.html
+++ b/srophe-app/templates/bhse.html
@@ -4,17 +4,18 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title data-template="config:app-title" coll-title="Syriaca.org: A Digital Catalogue of Syriac Manuscripts in the British Library" coll="manuscripts">Syriaca.org: A Digital Catalogue of Syriac Manuscripts in the British Library</title>
+        <title data-template="config:app-title" coll-title="Gateway to the Syriac Saints: Volume I: Bibliotheca Hagiographica Syriaca Electronica">Gateway to the Syriac Saints: Volume I: Bibliotheca Hagiographica Syriaca Electronica</title>
         <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
         <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
         <!--<meta name="DC.subject" property="dc.subject" content="Geography, Ancient"/>-->
         <meta name="DC.type" property="dc.type" content="Text"/>
-        <meta name="DC.isPartOf" property="dc.ispartof" content="A Digital Catalogue of Syriac Manuscripts in the British Library"/>
         <meta name="DC.isPartOf" property="dc.ispartof" content="Syriaca.org: The Syriac Reference Portal"/>
+        <meta name="DC.isPartOf" property="dc.ispartof" content="The Syriac Prosopography"/>
+        <meta name="DC.isPartOf" property="dc.ispartof" content="Qadishē: Guide to the Syriac Saints"/>
         <link rel="shortcut icon" href="/exist/apps/srophe/resources/img/syriaca.ico"/>
         <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/main.css"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/manuscripts.css"/>
+        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/saints.css"/>
         <link rel="stylesheet" type="text/css" media="print" href="/exist/apps/srophe/resources/css/print.css"/>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css"/>
         <link rel="stylesheet" href="/exist/apps/srophe/resources/leaflet/leaflet.awesome-markers.css"/>
@@ -38,8 +39,8 @@
                         <span class="icon-bar"/>
                         <span class="icon-bar"/>
                     </button>
-                    <a class="navbar-brand" href="/mss/index.html">
-                        <img alt="Syriac.org: MSS" src="/exist/apps/srophe/resources/img/icons-mss.png"/>
+                    <a class="navbar-brand" href="index.html">
+                        <img alt="Gateway to the Syriac Saints: Volume I: Bibliotheca Hagiographica Syriaca Electronica" src="/exist/apps/srophe/resources/img/icons-bhse.png"/>
                     </a>
                 </div>
                 <div class="navbar-collapse collapse pull-right">
@@ -50,42 +51,42 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="/geo/index.html" class="geo-sm-icon nav-icons">Gazetteer</a>
+                                    <a href="../geo/index.html" class="geo-sm-icon nav-icons">Gazetteer</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/persons/index.html" class="persons-sm-icon nav-icons">SBD</a>
+                                    <a href="../persons/index.html" class="persons-sm-icon nav-icons">SBD</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/q/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                                    <a href="../saints/index.html" class="saints-sm-icon nav-icons">Saints</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/spear/index.html" class="spear-sm-icon nav-icons">SPEAR</a>
+                                    <a href="../spear/index.html" class="spear-sm-icon nav-icons">SPEAR</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/mss/index.html" class="mss-sm-icon nav-icons">MSS</a>
+                                    <a href="../manuscripts/index.html" class="mss-sm-icon nav-icons">MSS</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/index.html" class="syriaca-sm-icon nav-icons">Syriaca.org</a>
+                                    <a href="../index.html" class="syriaca-sm-icon nav-icons">Syriaca.org</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/documentation/index.html">Documentation</a>
+                                    <a href="../documentation/index.html">Documentation</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="/mss/browse.html">index</a>
+                            <a href="/exist/apps/srophe/bhse/browse.html">index</a>
                         </li>
                     </ul>
-                    <form class="navbar-form navbar-right navbar-input-group" role="search" action="/mss/search.html" method="get">
+                    <form class="navbar-form navbar-right navbar-input-group" role="search" action="/exist/apps/srophe/bhse/search.html" method="get">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search" name="q" id="q"/>
-                            <input type="hidden" id="collection" value="manuscripts"/>
+                            <input type="hidden" id="collection" value="bhse"/>
                             <div class="input-group-btn">
                                 <button class="btn btn-default" type="submit">
                                     <span class="glyphicon glyphicon-search"/>
