--- a/srophe-app/templates/persons.html
+++ b/srophe-app/templates/persons.html
@@ -11,13 +11,13 @@
         <meta name="DC.type" property="dc.type" content="Text"/>
         <meta name="DC.isPartOf" property="dc.ispartof" content="Syriaca.org: The Syriac Reference Portal"/>
         <meta name="DC.isPartOf" property="dc.ispartof" content="The Syriac Biographical Dictionary"/>
-        <link rel="shortcut icon" href="/exist/apps/srophe/resources/img/syriaca.ico"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/main.css"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/persons.css"/>
-        <link rel="stylesheet" type="text/css" media="print" href="/exist/apps/srophe/resources/css/print.css"/>
+        <link rel="shortcut icon" href="$app-root/resources/img/syriaca.ico"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/main.css"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/persons.css"/>
+        <link rel="stylesheet" type="text/css" media="print" href="$app-root/resources/css/print.css"/>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css"/>
-        <link rel="stylesheet" href="/exist/apps/srophe/resources/leaflet/leaflet.awesome-markers.css"/>
+        <link rel="stylesheet" href="$app-root/resources/leaflet/leaflet.awesome-markers.css"/>
         <!-- temporary until migrate to bootstrap 3.0 -->
         <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js?2"/>
         <script src="http://isawnyu.github.com/awld-js/lib/requirejs/require.min.js" type="text/javascript"/>
@@ -38,7 +38,7 @@
                         <span class="icon-bar"/>
                         <span class="icon-bar"/>
                     </button>
-                    <a class="navbar-brand" href="/exist/apps/srophe/persons/index.html">
+                    <a class="navbar-brand" href="/persons/index.html">
                         <img alt="Syriac.org: Persons" src="/exist/apps/srophe/resources/img/icons-persons.png"/>
                     </a>
                 </div>
@@ -50,39 +50,43 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="/exist/apps/srophe/geo/index.html" class="geo-sm-icon nav-icons">Gazetteer</a>
+                                    <a href="/geo/index.html" class="geo-sm-icon nav-icons">Gazetteer</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/exist/apps/srophe/persons/index.html" class="persons-sm-icon nav-icons">SBD</a>
+                                    <a href="/persons/index.html" class="persons-sm-icon nav-icons">SBD</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/exist/apps/srophe/q/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                                    <a href="/authors/index.html" class="authors-sm-icon nav-icons">Authors</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/exist/apps/srophe/spear/index.html" class="spear-sm-icon nav-icons">SPEAR</a>
+                                    <a href="/saints/index.html" class="saints-sm-icon nav-icons">Saints</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/exist/apps/srophe/mss/index.html" class="mss-sm-icon nav-icons">MSS</a>
+                                    <a href="/spear/index.html" class="spear-sm-icon nav-icons">SPEAR</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/exist/apps/srophe/index.html" class="syriaca-sm-icon nav-icons">Syriaca.org</a>
+                                    <a href="/mss/index.html" class="mss-sm-icon nav-icons">MSS</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="/exist/apps/srophe/documentation/index.html">Documentation</a>
+                                    <a href="/index.html" class="syriaca-sm-icon nav-icons">Syriaca.org</a>
+                                </li>
+                                <li role="presentation" class="divider"/>
+                                <li>
+                                    <a href="/documentation/index.html">Documentation</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="/exist/apps/srophe/persons/browse.html">index</a>
+                            <a href="/persons/browse.html">index</a>
                         </li>
                     </ul>
-                    <form class="navbar-form navbar-right navbar-input-group" role="search" action="/exist/apps/srophe/persons/search.html" method="get">
+                    <form class="navbar-form navbar-right navbar-input-group" role="search" action="/persons/search.html" method="get">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search" name="q" id="q"/>
                             <input type="hidden" id="collection" value="persons"/>
@@ -93,7 +97,7 @@
                             </div>
                             <div class="input-group-btn">
                                 <span class="btn btn-default">
-                                    <a href="/exist/apps/srophe/persons/search.html" title="advanced search">
+                                    <a href="search.html" title="advanced search">
                                         <span class="glyphicon glyphicon-cog"/>
                                     </a>
                                 </span>
@@ -117,9 +121,9 @@
         </footer>
         
         <!-- Additional Javascript -->
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/bootstrap.min.js"/>
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/jquery.validate.min.js"/>
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/main.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/bootstrap.min.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/jquery.validate.min.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/main.js"/>
         <script>
             var _gaq=[['_setAccount',''],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
