--- a/srophe-app/templates/q.html
+++ b/srophe-app/templates/q.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title data-template="config:app-title" coll-title="Gateway to the Syriac Saints">Gateway to the Syriac Saints</title>
+        <title>Gateway to the Syriac Saints</title>
         <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
         <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
         <!--<meta name="DC.subject" property="dc.subject" content="Geography, Ancient"/>-->
@@ -12,13 +12,13 @@
         <meta name="DC.isPartOf" property="dc.ispartof" content="Syriaca.org: The Syriac Reference Portal"/>
         <meta name="DC.isPartOf" property="dc.ispartof" content="The Syriac Prosopography"/>
         <meta name="DC.isPartOf" property="dc.ispartof" content="Qadishē: Guide to the Syriac Saints"/>
-        <link rel="shortcut icon" href="/exist/apps/srophe/resources/img/syriaca.ico"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/main.css"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/saints.css"/>
-        <link rel="stylesheet" type="text/css" media="print" href="/exist/apps/srophe/resources/css/print.css"/>
+        <link rel="shortcut icon" href="$app-root/resources/img/syriaca.ico"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/main.css"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/saints.css"/>
+        <link rel="stylesheet" type="text/css" media="print" href="$app-root/resources/css/print.css"/>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css"/>
-        <link rel="stylesheet" href="/exist/apps/srophe/resources/leaflet/leaflet.awesome-markers.css"/>
+        <link rel="stylesheet" href="$app-root/resources/leaflet/leaflet.awesome-markers.css"/>
         <!-- temporary until migrate to bootstrap 3.0 -->
         <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js?2"/>
         <script src="http://isawnyu.github.com/awld-js/lib/requirejs/require.min.js" type="text/javascript"/>
@@ -123,9 +123,9 @@
         </footer>
         
         <!-- Additional Javascript -->
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/bootstrap.min.js"/>
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/jquery.validate.min.js"/>
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/main.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/bootstrap.min.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/jquery.validate.min.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/main.js"/>
         <script>
             var _gaq=[['_setAccount',''],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
