--- a/srophe-app/templates/saints.html
+++ b/srophe-app/templates/saints.html
@@ -12,13 +12,13 @@
         <meta name="DC.isPartOf" property="dc.ispartof" content="Syriaca.org: The Syriac Reference Portal"/>
         <meta name="DC.isPartOf" property="dc.ispartof" content="The Syriac Prosopography"/>
         <meta name="DC.isPartOf" property="dc.ispartof" content="Qadishē: Guide to the Syriac Saints"/>
-        <link rel="shortcut icon" href="/exist/apps/srophe/resources/img/syriaca.ico"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/main.css"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/saints.css"/>
-        <link rel="stylesheet" type="text/css" media="print" href="/exist/apps/srophe/resources/css/print.css"/>
+        <link rel="shortcut icon" href="$app-root/resources/img/syriaca.ico"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/main.css"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/saints.css"/>
+        <link rel="stylesheet" type="text/css" media="print" href="$app-root/resources/css/print.css"/>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css"/>
-        <link rel="stylesheet" href="/exist/apps/srophe/resources/leaflet/leaflet.awesome-markers.css"/>
+        <link rel="stylesheet" href="$app-root/resources/leaflet/leaflet.awesome-markers.css"/>
         <!-- temporary until migrate to bootstrap 3.0 -->
         <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js?2"/>
         <script src="http://isawnyu.github.com/awld-js/lib/requirejs/require.min.js" type="text/javascript"/>
@@ -39,7 +39,7 @@
                         <span class="icon-bar"/>
                         <span class="icon-bar"/>
                     </button>
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="/saints/index.html">
                         <img alt="Syriac.org: Persons" src="/exist/apps/srophe/resources/img/icons-saints.png"/>
                     </a>
                 </div>
@@ -51,39 +51,43 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="../geo/index.html" class="geo-sm-icon nav-icons">Gazetteer</a>
+                                    <a href="/geo/index.html" class="geo-sm-icon nav-icons">Gazetteer</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="../persons/index.html" class="persons-sm-icon nav-icons">SBD</a>
+                                    <a href="/persons/index.html" class="persons-sm-icon nav-icons">SBD</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="../q/index.html" class="saints-sm-icon nav-icons">Saints</a>
+                                    <a href="/authors/index.html" class="authors-sm-icon nav-icons">Authors</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="../spear/index.html" class="spear-sm-icon nav-icons">SPEAR</a>
+                                    <a href="/saints/index.html" class="saints-sm-icon nav-icons">Saints</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="../manuscripts/index.html" class="mss-sm-icon nav-icons">MSS</a>
+                                    <a href="/spear/index.html" class="spear-sm-icon nav-icons">SPEAR</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="../index.html" class="syriaca-sm-icon nav-icons">Syriaca.org</a>
+                                    <a href="/mss/index.html" class="mss-sm-icon nav-icons">MSS</a>
                                 </li>
                                 <li role="presentation" class="divider"/>
                                 <li>
-                                    <a href="../documentation/index.html">Documentation</a>
+                                    <a href="/index.html" class="syriaca-sm-icon nav-icons">Syriaca.org</a>
+                                </li>
+                                <li role="presentation" class="divider"/>
+                                <li>
+                                    <a href="/documentation/index.html">Documentation</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="browse.html">index</a>
+                            <a href="/saints/browse.html">index</a>
                         </li>
                     </ul>
-                    <form class="navbar-form navbar-right navbar-input-group" role="search" action="search.html" method="get">
+                    <form class="navbar-form navbar-right navbar-input-group" role="search" action="/saints/search.html" method="get">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search" name="q" id="q"/>
                             <input type="hidden" id="collection" value="saints"/>
@@ -118,9 +122,9 @@
         </footer>
         
         <!-- Additional Javascript -->
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/bootstrap.min.js"/>
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/jquery.validate.min.js"/>
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/main.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/bootstrap.min.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/jquery.validate.min.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/main.js"/>
         <script>
             var _gaq=[['_setAccount',''],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
