--- a/srophe-app/templates/syrpage.html
+++ b/srophe-app/templates/syrpage.html
@@ -10,11 +10,11 @@
         <!--<meta name="DC.subject" property="dc.subject" content="Geography, Ancient"/>-->
         <meta name="DC.type" property="dc.type" content="Text"/>
         <meta name="DC.isPartOf" property="dc.ispartof" content="Syriaca.org"/>
-        <link rel="shortcut icon" href="/exist/apps/srophe/resources/img/syriaca.ico"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/main.css"/>
-        <link rel="stylesheet" type="text/css" href="/exist/apps/srophe/resources/css/syriaca.css"/>
-        <link rel="stylesheet" type="text/css" media="print" href="/exist/apps/srophe/resources/css/print.css"/>
+        <link rel="shortcut icon" href="$app-root/resources/img/syriaca.ico"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/main.css"/>
+        <link rel="stylesheet" type="text/css" href="$app-root/resources/css/syriaca.css"/>
+        <link rel="stylesheet" type="text/css" media="print" href="$app-root/resources/css/print.css"/>
         <!-- temporary until migrate to bootstrap 3.0 -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"/>
     </head>
@@ -85,7 +85,7 @@
                             <a href="documentation/index.html">Documentation</a>
                         </li>
                     </ul>
-                    <!-- Enable cross module searching -->
+                    <!-- Enable cross module searching 
                     <form class="navbar-form navbar-right navbar-input-group" role="search" action="search.html" method="get">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search" name="q" id="q"/>
@@ -102,7 +102,7 @@
                                 </span>
                             </div>
                         </div>
-                    </form>
+                    </form>-->
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -119,9 +119,9 @@
             </div>
         </footer>        
         <!-- Additional Javascript -->
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/bootstrap.min.js"/>
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/jquery.validate.min.js"/>
-        <script type="text/javascript" src="/exist/apps/srophe/resources/js/main.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/bootstrap.min.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/jquery.validate.min.js"/>
+        <script type="text/javascript" src="$app-root/resources/js/main.js"/>
         <script>
             var _gaq=[['_setAccount',''],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
