Updates to resource links.

--- a/srophe-app/templates/authors.html
+++ b/srophe-app/templates/authors.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" type="text/css" href="$app-root/resources/css/authors.css"/>
         <link rel="stylesheet" type="text/css" media="print" href="$app-root/resources/css/print.css"/>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css"/>
-        <link rel="stylesheet" href="/exist/apps/srophe/resources/leaflet/leaflet.awesome-markers.css"/>
+        <link rel="stylesheet" href="$app-root/resources/leaflet/leaflet.awesome-markers.css"/>
         <!-- temporary until migrate to bootstrap 3.0 -->
         <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js?2"/>
         <script src="http://isawnyu.github.com/awld-js/lib/requirejs/require.min.js" type="text/javascript"/>
