--- a/srophe-app/resources/css/main.css
+++ b/srophe-app/resources/css/main.css
@@ -11,19 +11,28 @@
  * Dark Grey #333
  * Light Grey (text): #999
  */
-/* Import Font css */ 
- @import url("syr-font-families.css");
+ 
+body {background-color:#385978;}
+#main {background-color:#999;}
+
 /* Main content blocks */
-/* This is the background color for geo */
-body {font-family: arial, sans-serif; padding-top:50px;}
-/* This is the background color for geo */
-#main {margin: 0 auto; padding:0; border-top:1px solid #753C28;}
+.navbar {border-bottom:4px solid #456889 !important;}
+.navbar-inner {border-bottom:.5em solid #456889 !important;}
+.navbar-inner .container{height: 45px !important; padding-top:.5em; margin-left:.5em;}
+.brand {margin-top:-.75em; margin-left:40px;padding-left:0;}
+.brand img {margin-left:1.5em;padding-left:0;}
+
+.navbar-inner .nav > li > a:hover, .advanced-search > a:hover {
+        border-bottom: 4px solid #DDEAF1 !important;  
+}
+.navbar-inner > .container > .nav > li.selected {border-bottom: 4px solid #E69849 !important; }
+
 
 /* all backgrounds */
-#content {margin:auto; padding-top:2em; background-color:white;}
-.navbar {border-bottom:4px solid #753C28 !important;}
-.navbar-brand {margin-top:-.5em; padding-left:0;}
-.navbar-brand img {padding-left:0;}
+#content {margin:auto; padding-top:6em; background-color:white;}
+
+.navbar-brand {margin-top:-.2em; padding-left:0;}
+.navbar-brand img {padding-left:0; margin-left:-1em;}
 .navbar .advanced-search{margin-top:-.5em;}
 .navbar-form {overflow:hidden;}
 .navbar-input-group {
@@ -42,17 +51,11 @@ body {font-family: arial, sans-serif; padding-top:50px;}
 
 /* Nav bar icons for submodules */
 .dropdown-menu li a{margin-left:.5em;}
-
 .nav-icons {
     background-position: left center;
     background-repeat: no-repeat;
     text-indent:12px;
 }
-
-/*.sub-menu {background-color:#F8F8F8; margin:0; padding:0;}*/
-.sub-menu .nav-icons{margin-left:2em; }
-/*.sub-menu li{line-height:.75em;}*/
-
 /* Small icons for submodules in nav menus */
 .geo-sm-icon {background-image: url(../img/icons-geo-sm.png);}
 .saints-sm-icon {background-image: url(../img/icons-saints-sm.png);}
@@ -60,19 +63,19 @@ body {font-family: arial, sans-serif; padding-top:50px;}
 .authors-sm-icon {background-image: url(../img/icons-authors-sm.png);}
 .spear-sm-icon {background-image: url(../img/icons-spear-sm.png);}
 .mss-sm-icon {background-image: url(../img/icons-mss-sm.png);}
-.bhse-sm-icon {background-image: url(../img/icons-bhse-sm.png);}
 .syriaca-sm-icon {background-image: url(../img/icons-syriaca-sm.png);}
 
 footer {text-align:center; color:white;}
 
 /* Typography */
-h1 {font-size:1.5em; margin:0 0 .25em 0; color:#E69849; font-weight:500;}
+h1 {font-size:1.5em; margin:0 0 .25em 0; color:#456889; font-weight:500;}
 /*h2 {font-size:1.5em; margin:0 -1em; padding-left:8px; color:#E69849; font-weight:500;}*/
-h2 {font-size: 1.25em; margin:1em 0 .25em 0; padding-bottom:0; color:#753C28; font-weight:500;}
-h3 {font-size: 1.2em; margin:1em 0 .25em 0; padding-bottom:0; color:#333; font-weight:500; border-bottom:1px solid #999; padding-bottom:0; margin-bottom:1em;}
-h3.underline {color:#999; border-bottom:3px solid #E69849; padding-bottom:-.75em; margin-bottom:1em; margin-top:1em;}
+h2 {font-size: 1.25em; margin:1em 0 .25em 0; padding-bottom:0; color:#999; font-weight:500;}
+h3 {font-size: 1.2em; margin:1em 0 .25em 0; padding-bottom:0; color:#333; font-weight:500;}
+h3.underline {color:#333; border-bottom:3px solid #456889; padding-bottom:-.75em; margin-bottom:1em; margin-top:1em;}
 h4 {font-size: 1em; margin:0 0 .25em 0; padding-bottom:0; font-weight:bold;}
 
+.column1 h3{border-bottom:1px solid #999; padding-bottom:0; margin-bottom:1em;}
 h3.label {
     background-color:#ccc;
     line-height: 1.2em;
@@ -117,7 +120,7 @@ h4 {font-size: 1em; margin-top:1em;}
 .section.type ul {padding-left:0;}
 
 /* Browse page styles */
-.syr-list{padding-right:7em; padding-top:2em; text-align: right;}
+.syr-list{padding-right:7em; padding-top:2em;}
 .en-list{padding-left:5em; padding-top:2em;}
 .browse-alpha {border-bottom:1px solid #ccc; padding-left:1em; padding:0; margin-bottom:1em; text-align: justify;}
 
@@ -135,16 +138,13 @@ h4 {font-size: 1em; margin-top:1em;}
       background-color: #eee;
       cursor: pointer;
     }
-
 .browse-map {margin:0;}
 .inline-map {margin-left:-2em; margin-bottom:1em;}
 .map-lg #map {height:400px !important;}
 .map-md #map {height:300px !important;}
 .map-sm #map {height:250px !important;} 
 .results-list {margin-left: 25px; border-bottom:1px dotted #eee; padding-top:.5em}
-.results-list-desc{display:block;}
-.results-list-desc .pers-label {background-color:#eee;}
-.results-list-desc .pers-label .footnote-refs {display:none;}
+.results-list-desc{display:block;padding-left:1.5em;}
 /* footnote styles */
 .footnote-refs, .footnote-tgt {
     font-size: .7em;
@@ -188,35 +188,6 @@ h4 {font-size: 1em; margin-top:1em;}
 
 :lang(en) {
 	font-family: arial, sans-serif;
-}
-
-:lang(syr),:lang(syc) {
- font-family: "EstrangeloEdessa", "Estrangelo Edessa", Verdana, Arial, Helvetica, sans-serif;
-  /*font-size:large;*/
-  font-size:1.25em; 
-  line-height:1em;
-  
-}
-
-:lang(syr-Syrj), :lang(syc-Syrj) {
- font-family: "SertoBatnan", "Serto Batnan", Verdana, Arial, Helvetica, sans-serif;
-  font-size:1.25em; 
-  line-height:1em;
- 
-}
-
-:lang(syr-Syre), :lang(syc-Syre) {
- font-family: "EastSyriacAdiabene", "East Syriac Adiabene", Verdana, Arial, Helvetica, sans-serif;
- font-size:1.25em; 
- line-height:1em;
-
-}
-
-:lang(ar) {
- font-family: arial, sans-serif;
- font-size:1.25em; 
- line-height:1em;
- 
 }
 
 /* Browse tabs and side menues */  	
