--- a/srophe-app/templates/map.html
+++ b/srophe-app/templates/map.html
@@ -4,13 +4,12 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title data-template="place:app-title">Syriaca.org: Gazetteer Demo app</title>
+        <title data-template="place:app-title" coll-title="Logar: Linked Open Gazetteer of the Andean Region" coll="places">Logar: Linked Open Gazetteer of the Andean Region</title>
         <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
         <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
         <meta name="DC.subject" property="dc.subject" content="Geography, Ancient"/>
         <meta name="DC.type" property="dc.type" content="Text"/>
         <meta name="DC.isPartOf" property="dc.ispartof" content="Logar: Linked Open Gazetteer of the Andean Region"/>
-        <meta name="DC.isPartOf" property="dc.ispartof" content="The Syriac Gazetteer"/>
         <!--<link rel="shortcut icon" href="/exist/apps/srophe/resources/img/gazetteer.ico"/>-->
         <link rel="stylesheet" type="text/css" href="$app-root/resources/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="$app-root/resources/css/main.css"/>
@@ -18,9 +17,8 @@
         <link rel="stylesheet" type="text/css" media="print" href="$app-root/resources/css/print.css"/>
         <!--<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js?2"/>-->
         <!-- Leaflet -->
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-        <link rel="stylesheet" href="$app-root/resources/leaflet/leaflet.awesome-markers.css" />
-        
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css"/>
+        <link rel="stylesheet" href="$app-root/resources/leaflet/leaflet.awesome-markers.css"/>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"/>
     </head>
     <body>
@@ -38,7 +36,7 @@
                         <span class="icon-bar"/>
                     </button>
                     <a class="navbar-brand" href="$app-root/index.html">
-                        <img alt="Gazetteer Demo App" src="$app-root/resources/img/syriaca-logo.png"/>
+                        <img alt="Logar: Linked Open Gazetteer of the Andean Region" src="$app-root/resources/img/logar.png"/>
                     </a>
                 </div>
                 <div class="navbar-collapse collapse pull-right">
