--- a/srophe-app/templates/geo.html
+++ b/srophe-app/templates/geo.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title data-template="place:app-title" coll-title="Logar: Linked Open Gazetteer of the Andean Region" coll="places">Logar: Linked Open Gazetteer of the Andean Region</title>
+        <title data-template="place:app-title" coll-title="Syriaca.org: Gazetteer App" coll="places">Syriaca.org: Gazetteer App</title>
         <!-- DC -->
         <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
         <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
@@ -15,7 +15,7 @@
         <link rel="stylesheet" type="text/css" href="$app-root/resources/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="$app-root/resources/css/main.css"/>
         <link rel="stylesheet" type="text/css" media="print" href="$app-root/resources/css/print.css"/>
-        <!--<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js?2"/>-->
+        
         <!-- Leaflet -->
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css"/>
         <link rel="stylesheet" href="$app-root/resources/leaflet/leaflet.awesome-markers.css"/>
@@ -36,7 +36,7 @@
                         <span class="icon-bar"/>
                     </button>
                     <a class="navbar-brand" href="$app-root/index.html">
-                        <img alt="Logar: Linked Open Gazetteer of the Andean Region" src="$app-root/resources/img/logar.png"/>
+                        <img alt="Logar: Linked Open Gazetteer of the Andean Region" src="$app-root/resources/img/syriaca-logo.png"/>
                     </a>
                 </div>
                 <div class="navbar-collapse collapse pull-right">
