Increase map window size on home page to 90% #6

--- a/srophe-app/resources/css/main.css
+++ b/srophe-app/resources/css/main.css
@@ -141,7 +141,7 @@ h4 {font-size: 1em; margin-top:1em;}
 
 .browse-map {margin:0;}
 .inline-map {margin-left:-2em; margin-bottom:1em;}
-.map-lg #map {height:400px !important;}
+.map-lg #map {height:90% !important;}
 .map-md #map {height:300px !important;}
 .map-sm #map {height:250px !important;} 
 .results-list {margin-left: 25px; border-bottom:1px dotted #eee; padding-top:.5em}
